changed profile pic

--- a/public/css/goldwater.css
+++ b/public/css/goldwater.css
@@ -59,6 +59,6 @@
   margin-top: 10px;
 }
 .profile-menu > a {
-    background: url(../images/trump-wall.png) no-repeat left top;
+    background: url(../img/profile-menu.png) no-repeat left top;
     background-size: 100%;
 }
